# AStar

./: .gitignore  CMakeLists.txt  README.md  app_icon.aps  imports.cmake  main.cpp  main.qml  pathfinder.cpp  pathfinder.h  resources.qrc
